

*****  Sat Oct 21 18:56:15 CEST 2017  *****

Rewrote disk C extension, moving most of the work into the cdisk.h
header, such it can be called from other C extentions.


*****  Fr 27. Okt 17:23:32 CEST 2017  *****

Implemented and documented the low-level aperture photometry routine
in aphot.c (a C extension).

*****

Incorporated aperture photometry in the puppies.photometry submodule.


*****  Sun Oct 29 17:05:52 CET 2017  *****

Implemented aperture photometry module.
Optimal photometry is TBI.

*****

Renamed centering's expand input to psfscale (pixel scale ratio
between the PSF and data images) to avoid conflict with photometry's
expand interpolating factor.


*****  Sat Nov  4 11:59:41 CET 2017  *****

Added some extra information about the Spitzer bad-pixel-mask bits,
still not completely sure it's the right one.


*****  Sun Nov 12 20:47:00 CET 2017  *****

Revampled spitzer.py to handle time stamps with astropy.time objects
for the ephtime and fp.time values.  This simplifies the light
travel time corrections, bjd-utc corrections, phase calculation.
The pipeline now takes the spacecraft location from the headers
instead of the horizons file.
All of these calculation are now in Spitzer.py rather than after
the photometry step.

Also, revamped the main object's FrameParameter from 2D into 1D.
This commit breaks all further steps of the pipeline.


*****  Sat Nov 18 22:09:59 CET 2017  *****

Adapted pup_badpix.py to the new data shape.

*****

Adapted pup_centering.py to the new data shape.


*****  Sun Nov 26 11:29:16 CET 2017  *****

Moved telemetry frame parameters into its own subclass.

*****

Adapted pup_photom.py to the new data shape.

*****

Added new plots module, to make plots (duh!).
Implemented YX plot vs. phase for centering.

*****

Added stats calculations at the end of pup_centering.py to print
means, median, std, and RMS.  Also make yx plots.


*****  Sun Dec 10 16:29:52 CET 2017  *****

Added MC3 submodule.

*****

